cluster/apps/security/vault/app/cronjob.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-vault-snapshot-agent
  namespace: vault
spec:
  selector:
    app: vault-snapshot-agent
  clusterIP: None
  publishNotReadyAddresses: true
