cluster/apps/security/vault/app/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-lb
  namespace: vault
  annotations:
    io.cilium/lb-ipam-ips: 10.0.0.6
    external-dns.alpha.kubernetes.io/hostname: vault.akchristiansen.com
spec:
  ports:
    - name: vault
      protocol: TCP
      port: 8200
      targetPort: 8200
  selector:
    vault-active: "true"
  type: LoadBalancer
